recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:7: error: illegal start of simple expression
    gauche(;)
           ^FourSquare:7: error: illegal start of statement
    gauche(;)
            ^