recursion.logo.square.FourSquare.scala.code
override def run() {
  for(j<-1 to 4){
  	for (k<- 1 to 4){
    	avance(100);
    	gauche();    
  	}
    gauche(;)
	}
}